修改了部分错别字。

--- a/门前的花.md
+++ b/门前的花.md
@@ -1,8 +1,8 @@
 # 闲逛
-今天，我无所事事。于是，走在曲曲弯弯的小街上。阴霾的天色，让我呼吸困难。我决定走得快些，期待不远处有个稍微得晴天。也许没有。但，我期待。
+今天，我无所事事。于是，走在曲曲弯弯的小街上。阴霾的天色，让我呼吸困难。我决定走得快些，期待不远处有个稍微的晴天。也许没有。但，我期待。
 # 晴天
-没有预兆，天气就晴朗了些。我抬头看看高高得天空。有蓝色的天，以及雪白的云。我还是要走得快些。也许有更加得美好在前面呢。
+没有预兆，天气就晴朗了些。我抬头看看高高的天空。有蓝色的天，以及雪白的云。我还是要走得快些。也许有更加的美好在前面呢。
 # 公园
-仅有得几棵松树，稳稳地站在院子里。她们隔着围墙看着我。我走着，她们转动着身体。她们喜欢我吗？到了公园门口。哦，原来是一家私宅。门紧锁着。
+仅有的几棵松树，稳稳地站在院子里。她们隔着围墙看着我。我走着，她们转动着身体。她们喜欢我吗？到了公园门口。哦，原来是一家私宅。门紧锁着。
 # 小花
-前面得一个弯曲有个台阶。我随便转了一个身，看到了几盆艳丽地开着的不知名的花。她们喜欢我吗？那么娇艳！花瓣落下，花盆里有，台阶上也有。花的主人去哪里了？她难道不知道，她的花儿情扰了我的心吗？
+前面的一个弯曲有个台阶。我随便转了一个身，看到了几盆艳丽地开着得不知名的花。她们喜欢我吗？那么娇艳！花瓣落下，花盆里有，台阶上也有。花的主人去哪里了？她难道不知道，她的花儿情扰了我的心吗？
