有感于休闲的意义

--- a/日记.md
+++ b/日记.md
@@ -4,3 +4,5 @@
 电话里王伟告诉我，他的一个朋友是做一家生产护膝产品的老总。以前曾经做过淘宝，但是不太成功，前期投入了不少的时间和资本，但是收效甚微。但是，他的客户都在做一些淘宝，而且做得风生水起的。所以，他告诉我，他的老总朋友还是想继续做电子商务。只是，不再像做之前的淘宝了，而是转战天猫。他把我给推荐给那位老总。王想问问我能不能帮助一下他。
 我的答复是见面聊。时间定在2017年7月24日的晚6点左右。
 就此事，我想先问问杨哥的主意。
+2017/10/5 上午
+不看了《老巴塔哥尼亚快车》，就不知了自己为何而外出，仿佛休闲的意义和方式全部存在于这本书中。自己的内心里空无一物。顿时，我心中泛起无力的疲倦。
